--- a/Waybar/style.css
+++ b/Waybar/style.css
@@ -1,29 +1,16 @@
 * {
     font-family: "CaskaydiaCove Nerd Font", "Font Awesome 6 Free", "Font Awesome 6 Free Solid";
     font-size: 16px;
-    border-radius: 0;
-    min-height: 0;
-    border: none;
     font-weight: bold;
 }
 
 #workspaces {
     background-color: transparent;
-    border: none;
-    box-shadow: none;
     margin-left: 3px;
 }
 
-#tray {
-    margin: 6px 3px;
-    background-color: rgba(36, 36, 52, 1.0);
-    padding: 6px 12px;
-    border-radius: 6px;
-    border-width: 0px;
-}
-
 #waybar {
-    background-color: rgba(36, 36, 52, 0.75);
+    background-color: rgba(220, 220, 240, 0);
     transition-property: background-color;
     transition-duration: 0.5s;
 }
@@ -36,65 +23,65 @@
 #memory,
 #cpu,
 #network {
-    border-radius: 4px;
+    border-radius: 10px;
     margin: 6px 3px;
     padding: 6px 12px;
-    background-color: #1e1e2e;
-    color: #181825;
+    background-color: #dfe1f2;
+    color: #ffffdb;
+    text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
 }
 
 #clock {
-    background-color: #89b4fa;
+    background-color: #a8d0fb;
 }
 
 #pulseaudio {
-    background-color: #89dceb;
+    background-color: #a0e7f5;
 }
 
 #backlight {
-    background-color: #a6a3a1;
+    background-color: #cfcfcf;
 }
 
 #memory {
-    background-color: #f7768e;
+    background-color: #f9b4c3;
 }
 
 #cpu {
-    background-color: #f38ba8;
+    background-color: #f7c1d2;
     margin-right: 6px;
 }
 
 #network {
-    background-color: #fab387;
+    background-color: #fcd3b6;
 }
 
 #window {
-    background-color: #74c7ec;
+    background-color: #b3e0fc;
 }
 
 #waybar.hidden {
-    opacity: 0.5;
+    opacity: 0.75;
 }
 
 #workspaces button {
-    all: initial;
-    min-width: 0;
-    box-shadow: inset 0 -3px transparent;
-    padding: 6px 18px;
+    border-radius: 100%;
     margin: 6px 3px;
-    border-radius: 4px;
-    background-color: rgba(36, 36, 52, 1.0);
-    color: #cdd6f4;
+    padding: 6px 10px;
+    background-color: #dcdff4;
+    color: #ffffdb;
+    text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 #workspaces button.active {
-    color: #1e1e2e;
-    background-color: #e486cf;
+    color: #ffffdb;
+    background-color: #c1c5f5;
 }
 
 #workspaces button:hover {
-    box-shadow: inherit;
-    text-shadow: inherit;
-    background-color: rgb(48, 48, 65);
-    color: #cdd6f4;
+    background-color: #cacaea;
+    color: #fefed4;
 }
